--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@ html, body {
     margin: 0;
 }
 
+.laadi {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(15, 15, 15, 1);
+    position: absolute;
+    z-index: 1000;
+}
+
 /*~~~~~~~~~~~~~~~~~~~~~~~~~
 Info kaart :b
 ~~~~~~~~~~~~~~~~~~~~~~~~~*/
