--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,25 @@
 html, body {
     background-image: url('../img/bg.jpg');
     background-size: cover;
-    color: azure;
+    color: #333;
     font-family: 'Source Code Pro', sans-serif !important;
     height: 100%;
     width: 100%;
     text-align: center;
     margin: 0;
 }
+
+::selection {
+  background: #C4C4C4; /* WebKit/Blink Browsers */
+}
+
+::-moz-selection {
+  background: #C4C4C4; /* Gecko Browsers */
+}
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~
+Laadur ;3
+~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .laadi {
     width: 100%;
@@ -30,9 +42,9 @@ Info kaart :b
 div.info {
     display: inline-block;
     vertical-align: middle;
-    background-color: rgba(0, 0, 0, 0.7);
-    border-bottom-right-radius: 6px;
-    border-bottom-left-radius: 6px;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
     width: 25%;
     padding: 16px;
 }
@@ -40,32 +52,25 @@ div.info {
 .info img {
     height: 118px;
     width: 118px;
+    content:url('https://pbs.twimg.com/profile_images/585769811050799104/u3Fbzgfu_400x400.png');
 }
 
 .info p {
     margin-top: 16px;
-    max-height: 20%;
-}
-
-div.jalus {
-    width: 100%;
-    position: fixed;
-    height: 63px;
-    background-color: rgba(0, 0, 0, 0.7);
-    bottom: 0;
-    padding: 16px 16px;
-}
-
-.jutt {
-    list-style-type: none;
-    padding-left: 0;
-    overflow: hidden;
-    font-size: 23px;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~
 Jalus ^-^
 ~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+div.jalus {
+    width: 100%;
+    position: fixed;
+    height: 63px;
+    background-color: rgba(0, 0, 0, 0.8);
+    bottom: 0;
+    padding: 16px 16px;
+}
 
 .jalus p {
     margin-top: 5px;
@@ -83,7 +88,7 @@ Jalus ^-^
 }
 
 .jalus .sots a i {
-    padding-right: 4px;
+    padding-right: 2px;
     color: #333;
 }
 
