--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 Üldine Cx
 ~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-html, body {
+html,
+body {
     background-image: url('../img/bg.jpg');
     background-size: cover;
     color: #333;
@@ -16,12 +17,15 @@ html, body {
 }
 
 ::selection {
-  background: #C4C4C4; /* WebKit/Blink Browsers */
+    background: #C4C4C4;
+    /* WebKit/Blink Browsers */
 }
 
 ::-moz-selection {
-  background: #C4C4C4; /* Gecko Browsers */
+    background: #C4C4C4;
+    /* Gecko Browsers */
 }
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~
 Laadur ;3
@@ -34,6 +38,7 @@ Laadur ;3
     position: absolute;
     z-index: 1000;
 }
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~
 Info kaart :b
@@ -52,12 +57,13 @@ div.info {
 .info img {
     height: 118px;
     width: 118px;
-    content:url('https://pbs.twimg.com/profile_images/585769811050799104/u3Fbzgfu_400x400.png');
+    content: url('https://pbs.twimg.com/profile_images/585769811050799104/u3Fbzgfu_400x400.png');
 }
 
 .info p {
     margin-top: 16px;
 }
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~
 Jalus ^-^
@@ -78,8 +84,8 @@ div.jalus {
     float: left !important;
 }
 
-.jalus p:hover { 
-    color: dimgray; 
+.jalus p:hover {
+    color: dimgray;
 }
 
 .jalus .sots {
@@ -92,107 +98,89 @@ div.jalus {
     color: #333;
 }
 
-.jalus .sots a i:hover { 
-    color: dimgray; 
+.jalus .sots a i:hover {
+    color: dimgray;
 }
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~
 Reag. Korrapärasus x3
 ~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-@media only screen
-and (max-width: 900px) {
+@media only screen and (max-width: 900px) {
     div.info {
         width: 30%;
     }
 }
 
-@media only screen
-and (max-width: 750px) {
+@media only screen and (max-width: 750px) {
     div.info {
         width: 35%;
     }
 }
 
-@media only screen
-and (max-width: 650px) {
+@media only screen and (max-width: 650px) {
     div.info {
         width: 100%;
     }
 }
 
-@media only screen
-and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
     div.info {
         height: 100%;
     }
-    
     .jalus {
         background-color: transparent!important;
         margin: 20px 0px;
     }
-    
     .jalus .sots {
         text-align: center;
         width: 100%;
     }
-    
     .jalus p {
         text-align: center;
         width: 100%;
     }
 }
 
-@media only screen
-and (max-height: 525px) {
+@media only screen and (max-height: 525px) {
     div.info {
         width: 100%;
         height: 100%;
     }
-    
     .jalus {
         background-color: transparent!important;
         margin: 25px 0px;
     }
-    
     .jalus .sots {
         text-align: center;
         width: 100%;
     }
-    
     .jalus p {
         text-align: center;
         width: 100%;
     }
 }
 
-@media only screen
-and (max-width: 435px)
-and (max-height: 430px) {
+@media only screen and (max-width: 435px) and (max-height: 430px) {
     .jalus {
         display: none;
     }
 }
 
-@media only screen
-and (max-height: 350px)
-and (min-width: 0px) {
+@media only screen and (max-height: 350px) and (min-width: 0px) {
     .jalus {
         display: none;
     }
 }
 
-@media only screen
-and (max-height: 280px)
-and (min-width: 0px) {
+@media only screen and (max-height: 280px) and (min-width: 0px) {
     .info img {
         display: none;
     }
 }
 
-@media only screen
-and (max-height: 370px)
-and (max-width: 300px) {
+@media only screen and (max-height: 370px) and (max-width: 300px) {
     .info img {
         display: none;
     }
