--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html,
 body {
     background-image: url('../img/bg.jpg');
     background-size: cover;
-    color: #333;
+    color: #676767!important;
     font-family: 'Source Code Pro', sans-serif !important;
     height: 100%;
     width: 100%;
@@ -18,12 +18,10 @@ body {
 
 ::selection {
     background: #C4C4C4;
-    /* WebKit/Blink Browsers */
 }
 
 ::-moz-selection {
     background: #C4C4C4;
-    /* Gecko Browsers */
 }
 
 
@@ -85,7 +83,7 @@ div.jalus {
 }
 
 .jalus p.aut:hover {
-    color: dimgray;
+    color: #DADADA;
 }
 
 .jalus img.sponsor {
@@ -114,11 +112,11 @@ div.jalus {
 
 .jalus .sots a i {
     padding-right: 2px;
-    color: #333;
+    color: #676767;
 }
 
 .jalus .sots a i:hover {
-    color: dimgray;
+    color: #DADADA;
 }
 
 
