Non-JS Browser comp.

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,14 @@ Laadur ;3
     z-index: 1000;
 }
 
+.jahScript {
+    display: none;
+}
+
+.jsOn .jahScript {
+    display: block;
+}
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~
 Info kaart :b
