--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-    background-image: url('../img/bg.jpg');
+    background-image: url('https://i.imgur.com/HQ5QSeR.jpg');
     background-size: cover;
     color: #676767!important;
     font-family: 'Source Code Pro', sans-serif !important;
@@ -16,6 +16,7 @@ body {
     margin: 0;
     overflow: hidden;
     position: fixed;
+    cursor: default;
 }
 
 ::selection {
