Added :focus* selector + beautifications
*For better compatibility of mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,8 @@ div.jalus {
     color: #676767;
 }
 
-.jalus .sots a i:hover {
+.jalus .sots a i:hover,
+.jalus .sots a i:focus {
     color: #DADADA;
 }
 
