--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@ div.jalus {
     float: left !important;
 }
 
-.jalus p.aut span.ktekst:hover {
+.jalus p.aut span.ktekst:hover,
+.jalus p.aut span.ktekst:focus {
     color: #DADADA;
 }
 
@@ -101,7 +102,8 @@ div.jalus {
     font-size: 10px;
 }
 
-.jalus a img.sponsor:hover {
+.jalus a img.sponsor:hover
+.jalus a img.sponsor:focus {
     content: url('../img/zone-color.png');
 }
 
