--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ body {
     overflow: hidden;
     position: fixed;
     cursor: default;
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
+    -webkit-user-select: text;
+    -webkit-touch-callout: text;
 }
 
 ::selection {
