--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ body {
     background: #C4C4C4;
 }
 
-
 /*~~~~~~~~~~~~~~~~~~~~~~~~~
 Laadur ;3
 ~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -37,7 +36,7 @@ Laadur ;3
 .laadi {
     width: 100%;
     height: 100%;
-    background-color: rgba(15, 15, 15, 1);
+    background-color: #f7f7f7;
     position: absolute;
     z-index: 1000;
 }
