--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ div.jalus {
 
 .jalus a img.sponsor:hover,
 .jalus a img.sponsor:focus {
-    content: url('../img/zone-color.png');
+    content: url('../img/rmgroup-color.png');
 }
 
 .jalus img.sp1 {
