--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-    background-image: url('https://i.imgur.com/HQ5QSeR.jpg');
+    background-image: url('../img/taust.jpg');
     background-size: cover;
     color: #676767!important;
     font-family: 'Source Code Pro', sans-serif !important;
